update UA page url

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="header-leng">
                         <ul class="header__info-lang">
                             <li class="desktop_lang">
-                                <a href="../ПОРТФОЛИО EN/UA/index-uk.html" class="desktop_lang_uk">UA</a>
+                                <a href="UA/index-uk.html" class="desktop_lang_uk">UA</a>
                             </li>
                             <li class="desktop_lang">
                                 <a href="../index.html" class="desktop_lang_en">EN</a>
