Первая проба отправки письма
проба -1

--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
                     <form>
                         <div class="form_inner">
                             <div class="form_box">
+                                <input type="hidden" name="project_name" value="Portfolio">
+                                <input type="hidden" name="admin_e-mail" value="fenix.life36@gmail.com">
+                                <input type="hidden" name="form_subject" value="New заявка">
                                 <label>
                                     <input type="text" placeholder="Name">
                                 </label>
@@ -367,6 +370,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/main.js"></script>
 
 
