Final 1-part of EN version

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     </div>
                     <div class="header_head">
                         <div class="header_title">
-                            HI. I'm Nastia
+                            HI. I'm Nastia.
                         </div>
                         <div class="header_text">
-                            I’m glad to see you in my site. There are my skills and my work.(Here you can find my skills and my work) 
+                            I’m glad to see you on my site. Here you can find out about my skills and works.
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         <h2>WELCOME</h2>
                     </div>
                     <div class="welcome-text">
-                            Hello. In this page you find information about me, my skills and my woks in portfolio.
+                        Hello. On this page you will find information about me, my skills and works in the portfolio.
                     </div>
                 </div>
             </div>
@@ -98,15 +98,15 @@
                         <h2>ABOUT ME</h2>
                     </div>
                     <div class="about-text">
-                        My name is Anastasiia and I love web-development. This direction of IT made me change the type of activity and do what I was always interested in create websites by customer design and from scratch. 
+                        My name is Anastasiia and l am interested in web-development. This IT direction has made me change the type of activity and start doing what I have always been interested. It is  creating websites by customer design and develop them from scratch.  
                     </div>
                 </div>
                 <div class="about-box">
                     <div class="about-title">
-                        <h2>My skills / My knowledge</h2>
+                        <h2>My skills and main knowledges</h2>
                     </div>
                     <div class="about-text">
-                        Despite the fact that I recently started to study web-development, at the moment I have enough confident knowledge, as for a specialist of my level, able to independently implement the project for the customer.
+                        Despite the fact that I have recently started studying web-development, at the present moment my knowledge  is  strong  enough , as for a specialist of my seniority. And I am able to implement  independently a project for a customer.
                     </div>
                     <div class="about-skils">
                         <div class="about-html-css">
@@ -150,10 +150,10 @@
                     <div class="service_boxes-1">
                         <div class="responsive-box">
                             <div class="responsive-title-box">
-                                Deadline
+                                Deadlines
                             </div>
                             <div class="responsive-text-box">
-                                Discussion of the deadline for work is a  necessarily for right planning of working hours and execution of the project.
+                                Discussion of a deadline of the  project  is essential   for proper planning of the work process and project execution.
                             </div>
                         </div>
                         <div class="costumazible-box">
@@ -161,15 +161,15 @@
                                 Design
                             </div>
                             <div class="costumazible-text-box">
-                                The implementation of the web-interface of the site according to the provided design is an important part of the project.
+                                Implementation of a web-interface of a site according to the provided design is an important part of a project.
                             </div>
                         </div>
                         <div class="cloud-box">
                             <div class="cloud-title-box">
-                                Work in a team
+                                Teamwork
                             </div>
                             <div class="cloud-text-box">
-                                The ability to work in a team is one of the hallmarks of a good specialist
+                                Ability to work in a team is one of the hallmarks of a good specialist.
                             </div>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                                 Code structure
                             </div>
                             <div class="pages-text-box">
-                                I support code structure and validity according to the latest standards using <a href="https://validator.w3.org/" target="_blank"> validator </a> and other services.
+                                I follow the code structure and validity according to the latest standards using <a href="https://validator.w3.org/" target="_blank"> validator </a> and other services.
                             </div>
                         </div>
                         <div class="comment-box">
@@ -187,7 +187,7 @@
                                 Always in touch
                             </div>
                             <div class="comment-text-box">
-                                I keep in touch. Always ready for online information sharing. I support all kinds of communications.
+                                I keep in touch. I am always ready for exchanging information. I keep on all kinds of communication.
                             </div>
                         </div>
                         <div class="html-box">
@@ -195,7 +195,7 @@
                                 HTML/CSS, JS video
                             </div>
                             <div class="html-text-box">
-                                I think it is necessary in my spare time to increase my level of knowledge through mentors or courses.
+                                I think that it is necessary to increase knowledge level in free time with the help of  mentors or  courses.
                             </div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                         <h2>PORTFOLIO</h2>
                     </div>
                     <div class="portfolio-text">
-                        In this section you will see the sites I have implemented. Everything from the design to the functional part is inspired.
+                        In this site’s section you will see projects I have implemented: both the design and the functional part are developed with inspired.
                     </div>
                 </div>
                 <div class="portfolio_progect">
@@ -301,7 +301,7 @@
                         <h2>CONTACTS</h2>
                     </div>
                     <div class="contacts_text">
-                        This section contains contact information that can be used to contact me at the specified phone number or send an e-mail. Also at the bottom of the page are links to social networks.
+                        This section contains contact information that can be used to contact me at the specified phone number or send an e-mail. Also, there are links to social networks at the bottom of the page.
                     </div>
                 </div>
             </div>
