--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                             <a data-fancybox data-src="#modal" href="javascript:;" data-options='{"touch" : false}'>
                                 <img src="img/project-1.png" width="240" height="130" alt="">
                             </a>
-                            <a >
-                                <img src="img/project-4.jpg" width="240" height="130" alt="">
+                            <a href="New-site/index.html" target="blank">
+                                <img src="img/project.png" width="240" height="130" alt="">
                             </a>
                         </div>
                         <div class="progect-boxes-2">
